# sd-job-scheduler-backend-mvp

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  DESIGN.md  Dockerfile  KICKOFF.md  README.md  alembic.ini  design.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  functional.yml  lint.yml
.venv-test/: pyvenv.cfg
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: mvp-scope.md  system-design.md
src/job_scheduler/: config.py  database.py  main.py
src/job_scheduler/models/: __init__.py  event.py  job.py  task.py
src/job_scheduler/routers/: jobs.py  tasks.py
src/job_scheduler/schemas/: __init__.py  event.py  job.py  task.py
src/job_scheduler/services/: job_service.py  scheduler.py  task_service.py
tests/: conftest.py  test_job_service.py  test_scheduler.py  test_schemas.py  test_task_service.py
tests/functional/: __init__.py  conftest.py  test_fr1_create_task.py  test_fr2_immediate_job.py  test_fr3_delayed_job.py  test_fr4_idempotency.py  test_fr5_execution.py  test_fr6_job_status.py  test_fr7_history.py  test_fr8_cancel.py  test_fr9_retry.py
tests/unit/: conftest.py  test_job_service.py  test_scheduler.py  test_schemas.py  test_task_service.py
verify/: manifest.env
verify/acceptance/: __init__.py  conftest.py
verify/state/: last.json
